--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@mdx-js/mdx": "^0.16.0",
+    "@zeit/next-mdx": "^1.2.0",
     "next": "^7.0.2",
     "react": "^16.6.1",
     "react-bootstrap": "^1.0.0-beta.2",
-    "react-dom": "^16.6.1"
+    "react-dom": "^16.6.1",
+    "react-markdown": "^4.0.3"
   },
   "devDependencies": {
     "babel-eslint": "8.2.6",
