--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@zeit/next-sass": "^1.0.1",
     "gray-matter": "^4.0.1",
     "klaw": "^3.0.0",
+    "netlify-cms": "^2.2.0",
     "next": "^7.0.2",
     "next-routes": "^1.4.2",
     "node-sass": "^4.10.0",
@@ -27,7 +28,8 @@
     "react-dom": "^16.6.3",
     "react-markdown": "^4.0.3",
     "remark-emoji": "^2.0.2",
-    "remark-images": "^0.16.1"
+    "remark-images": "^0.16.1",
+    "slate": "^0.34.7"
   },
   "devDependencies": {
     "babel-eslint": "8.2.6",
