--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -63,45 +63,45 @@ collections:
         fields:
         - {label: "Speltid", name: "duration", widget: "string"}
         - {label: "Uppläsare", name: "reciter", widget: "string"}
-  # - name: "sidor"
-  #   label: "Sidor"
-  #   files:
-  #     - label: "Startsida"
-  #       name: "startsida"
-  #       file: "content/index.md"
-  #       fields: 
-  #         - {label: Title, name: title, widget: string}
-  #         - {label: Intro, name: intro, widget: string}
-  #         - label: Banners
-  #           name: banners
-  #           widget: list
-  #           fields:
-  #             - {label: Name, name: name, widget: string}
-  #             - {label: Bild, name: image, widget: image}
-  #         - label: Kommande
-  #           name: kommande
-  #           widget: list  
-  #           fields: 
-  #             - {label: Bok, name: book, widget: relation, collection: books, searchFields: ["title"], valueField: title}
-  #             - {label: Text, name: text, widget: markdown}
-  # - name: "settings"
-  #   label: "Inställningar"
-  #   files:
-  #     - label: "Kontaktuppgifter"
-  #       name: "contact"
-  #       file: "content/contact.json"
-  #       format: "json"
-  #       fields: 
-  #         - {label: Namn, name: name, widget: string}
-  #         - {label: Postadress, name: address, widget: string}
-  #         - {label: Postnummer, name: zipCode, widget: string}
-  #         - {label: Postort, name: city, widget: string}
-  #         - {label: Telefon, name: phone, widget: string}
-  #         - {label: E-postadress, name: email, widget: string}
-  #         - label: Kontaktpersoner
-  #           name: people
-  #           widget: list
-  #           fields:
-  #             - {label: Name, name: name, widget: string}
-  #             - {label: Telefonnummer, name: phone, widget: "string"}
-  #             - {label: E-postadress, name: email, widget: "string"}
+  - name: "sidor"
+    label: "Sidor"
+    files:
+      - label: "Startsida"
+        name: "startsida"
+        file: "content/index.md"
+        fields: 
+          - {label: Title, name: title, widget: string}
+          - {label: Intro, name: intro, widget: string}
+          - label: Banners
+            name: banners
+            widget: list
+            fields:
+              - {label: Name, name: name, widget: string}
+              - {label: Bild, name: image, widget: image}
+          - label: Kommande
+            name: kommande
+            widget: list  
+            fields: 
+              - {label: Bok, name: book, widget: relation, collection: books, searchFields: ["title"], valueField: title}
+              - {label: Text, name: text, widget: markdown}
+  - name: "settings"
+    label: "Inställningar"
+    files:
+      - label: "Kontaktuppgifter"
+        name: "contact"
+        file: "content/contact.json"
+        format: "json"
+        fields: 
+          - {label: Namn, name: name, widget: string}
+          - {label: Postadress, name: address, widget: string}
+          - {label: Postnummer, name: zipCode, widget: string}
+          - {label: Postort, name: city, widget: string}
+          - {label: Telefon, name: phone, widget: string}
+          - {label: E-postadress, name: email, widget: string}
+          - label: Kontaktpersoner
+            name: people
+            widget: list
+            fields:
+              - {label: Name, name: name, widget: string}
+              - {label: Telefonnummer, name: phone, widget: "string"}
+              - {label: E-postadress, name: email, widget: "string"}
